--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "API desenvolvida no programa Explorer da Rocketseat",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.cjs --env production",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest --knexfile knexfile.cjs",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
   },
   "author": "Gabriel Rodrigues",
   "license": "ISC",
